Finished styling the header. Added proper spacing and fixed the whitespace bug

--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0px;
+    padding: 0px
+    
 }
 
 h1 {
@@ -14,9 +17,14 @@ h1 {
 button {
     background-color: #3882F6;
     color: #F9FAF8;
-    width: 64px;
-    padding: 0px 16px;
-    border-radius: 8px;
+    display: flex;
+    width: 100px;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+    padding: 64px, 0px;
+    border-radius: 6px;
+    border: none;
 }
 
 #hero-secondary {
@@ -30,7 +38,7 @@ button {
     color: #F9FAF8;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    width: 100%;
 }
 
 .intro-header {
@@ -47,14 +55,24 @@ button {
 }
 .intro-content {
     display: flex;
+    justify-content: center;
+    padding: 64px;
+    gap: 16px;
 }
 .intro-content-left {
     display: flex;
     flex-direction: column;
     flex: 1;
+    gap: 8px;
 }
 
 .intro-content-right {
     display: flex;
     flex: 1;
+    border-style: solid;
+    border-width: 2px;
+    border-color: gray;
+    background-color: gray;
+    justify-content: center;
+    align-items: center;
 }
